@@ -2,6 +2,8 @@
 pould
 =====
 
+v0.6.1.9000 (June 27, 2018)
+
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus HLA haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
 
 Example
@@ -17,10 +19,10 @@ library("pould")
 data(drb1.dqb1.demo)
 cALD(drb1.dqb1.demo,inPhase=FALSE)
 #> Calculating D', Wn and conditional ALD for 53 unphased genotypes at the DRB1 and DQB1 loci.
-#> D' for DRB1~DQB1 haplotypes: 0.958927672733723 (0.9589) 
-#> Wn for DRB1~DQB1 haplotypes: 0.811250970033711 (0.8113) 
-#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.904035610003137 (0.904)
-#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712697125542 (0.7787)
+#> D' for DRB1~DQB1 haplotypes: 0.958463656923869 (0.9585) 
+#> Wn for DRB1~DQB1 haplotypes: 0.811184755150961 (0.8112) 
+#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.903300945789016 (0.9033)
+#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712696319209 (0.7787)
 
 cALD(drb1.dqb1.demo,inPhase=TRUE)
 #> Calculating D', Wn and conditional ALD for 106 phased genotypes at the DRB1 and DQB1 loci.
